# push_swap

./: CMakeLists.txt  Makefile  arg.txt  benchmark.sh  cheak.txt  checker  make_ch  make_ps  ps100.sh  push_swap  test.txt  test0.txt  test1.txt
inc/: push_swap.h
libft/: Makefile  add_buff.c  ft_atoi.c  ft_printf.h  ft_strsplit.c  libft.h
src/: add_index.c  cheak.c  checker.c  error_ps.c  list_push_swap.c  main.c  markup.c  operations.c  operations1.c  operations2.c  push_swap.c  sort.c  sort1.c  sort2.c  t1000.c
